--- a/.gitignore
+++ b/.gitignore
@@ -363,4 +363,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-FineWoodworkingBasic\Program.cs
+FineWoodworkingBasic/Program.cs
